--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="color/default.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<!-- =======================================================
-    Theme Name: Maxim
+    Theme Name: SaiSharan
     Theme URL: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/
     Author: BootstrapMade.com
     Author URL: https://bootstrapmade.com
@@ -102,7 +102,7 @@
 					<h2><strong>About Me</strong></h2>		
                             <p> Hello I'm K.SAISHARAN and I live in Hyderabad.                                                  
                              </p>
-                            <p>Currently I'm pursuing my Under Graduation in NIIT UNIVERSITY. I'm a Big Data Aanlyst, UI/UX Designer and Web Developer.</p>
+                            <p>Currently I'm pursuing my Under Graduation in NIIT UNIVERSITY. I'm a Big Data Aanlyst, UI/UX Designer and Web Developer.I have been working as a web interface designer.I have experience in the production of CSS3 and HTML5 for modern websites.I loving creating awesome as per my clients’ need.I think user experience when I try to craft something for my clients. Making a design awesome</p>
 
 							</div>
 				<div class="span6 aligncenter flyRight">
