--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div class="row">
 				<div class="span6 alignright flyLeft">
 					<h2><strong>About Me</strong></h2>		
-                            <p> Hello I'm K.SAISHARAN and I live in Hyderabad.                                                  
+                            <p> Hello                                                   
                              </p>
                             <p>Currently I'm pursuing my Under Graduation in NIIT UNIVERSITY. I'm a Big Data Aanlyst, UI/UX Designer and Web Developer.I have been working as a web interface designer.I have experience in the production of CSS3 and HTML5 for modern websites.I loving creating awesome as per my clients’ need.I think user experience when I try to craft something for my clients. Making a design awesome</p>
 
