--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="header-wrapper" class="header-slider">
 		<header class="clearfix">
 			<div class="logo">
-			<h1><strong>Hi I'm SAI SHARAN</h1></strong>
+			<h1><strong>I'm SAI SHARAN</h1></strong>
 	         </div>
 			<div class="container">
 				<div class="row">
@@ -99,7 +99,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span6 alignright flyLeft">
-					<h1><strong>HELLO I'M SAI SHARAN</strong></h1>
+					<h1><strong>HELLO, I AM SAI SHARAN</strong></h1>
 					<h2><strong>About Me</strong></h2>		
                             <p> Hello                                                   
                              </p>
