--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<div class="span6 alignright flyLeft">
 					<h1><strong>HELLO, I AM SAI SHARAN</strong></h1>
 					<h3>Some Words About Me</h3>		
-                            <p> I am Hyderabad. I love programming reading, writing, cooking, craftworks and speaking.                                                    
+                            <p> I am from Hyderabad. I love programming reading, writing, cooking, craftworks and speaking.                                                    
                              </p>
                             <p>Currently I'm pursuing my Under Graduation in NIIT UNIVERSITY. I'm a Big Data Aanlyst, UI/UX Designer and Web Developer.I have been working as a web interface designer.I have experience in the production of CSS3 and HTML5 for modern websites.I loving creating awesome as per my clients’ need.I think user experience when I try to craft something for my clients. Making a design awesome</p>
 
