--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 						<h2>Programming Languages</h2>
 						<p>
 							C<br>
-							JAVA
+							C++<br>
+							Python
 						</p>
 					</div>
 				</div>
@@ -159,8 +160,8 @@
 						<h2>Databases</h2>
 						<p>
 							MY SQL<br>
-							MONGO DB<br>
-                            Cassandra
+							MONGO DB
+                           
                         </p>
 					</div>
 				</div>
