--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
 					<h3>Some Words About Me</h3>		
                             <p> I am from Hyderabad. I love programming, reading, writing, cooking, craftworks and philosophy.                                                    
                              </p>
-                            <p>Currently I'm pursuing my Under Graduation in NIIT UNIVERSITY. I'm a Big Data Aanlyst, UI/UX Designer and Web Developer.I have been working as a web interface designer.I have experience in the production of CSS3 and HTML5 for modern websites.I loving creating awesome as per my clients’ need.I think user experience when I try to craft something for my clients. Making a design awesome</p>
-
+                            <p>Currently I'm pursuing my Under Graduation at NIIT UNIVERSITY. Passionate and energetic computer science programmer with a strong foundation in Web development and Big Data Applications. I am presently expanding my solid experience in Big Data applications, analytics and UI / UX design. I focus on using my interpersonal skills to build good user experience and create a strong interest in my employers. 
 							</div>
 				<div class="span6 aligncenter flyRight">
 					<img src="img/sharan.png">
